<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WAID Profiler</string>
    <string name="action_settings">Settings</string>
    <string name="fragment_listener_title">Listener</string>
    <string name="fragment_profiles_title">Profiles</string>
    <string name="listener_service_label">Listener Service</string>
    <string name="temp_description">temp</string>
    <string name="listener_start">Start</string>
    <string name="listener_stop">Stop</string>
    <string name="history_empty">No evaluation yet</string>
    <string name="listener_service_started">Listener service started</string>
    <string name="listener_service_stopped">Listener service stopped</string>
    <string name="walking">Walking</string>
    <string name="car">Car</string>
    <string name="train">Train</string>
    <string name="idle">Idle</string>
    <string name="settings_behaviour_title">Behaviour</string>
    <string name="settings_profiles_title">Profiles</string>
    <string name="settings_restore_state_title">Restore previous state</string>
    <string name="settings_restore_state_desc">Restore the previous state of the device when the service stops</string>
    <string name="settings_history_length_title">History Length</string>
    <string name="settings_history_length_desc">The number of evaluations from which to calculate the current vehicle</string>
	<string name="pref_bluetooth">Bluetooth</string>
	<string name="pref_speakerphone">Speakerphone</string>
	<string name="pref_wifi">Wi-Fi</string>
	<string name="pref_enabled">Enable Vehicle</string>
	<string name="history_length_max_amount">Maximum length limited to </string>
	<string name="history_length_min_amount">Minimum length limited to </string>
	<string name="notification_mode_vehicle">Current mode: </string>
	<string name="settings_transitions_blacklist_title">Transitions Blacklist</string>
	<string name="settings_transitions_blacklist_desc">The list of transitions to ignore</string>
    
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>

</resources>